--- a/public/locales/news-ru.json
+++ b/public/locales/news-ru.json
@@ -1,35 +1,35 @@
 [
   {
     "id": 1,
-    "date": "05.02.2024",
-    "title": "Новая новость: Расширение деятельности",
-    "excerpt": "Краткий текст для карточки на главной странице...",
+    "date": "10.01.2026",
+    "title": "Регистрация фонда Bulwark",
+    "excerpt": "Наш фонд официально зарегистрирован и начал свою деятельность...",
     "image": "/img/news/news-1.webp",
-    "content": "<p>Полный текст о том, как именно расширяется деятельность фонда Bulwark. Здесь может быть много абзацев.</p>"
+    "content": "<h3>Официальный старт</h3><p>Фонд Bulwark получил юридическую регистрацию. Это позволяет нам легально работать и открыто сотрудничать с партнёрами.</p><h3>Миссия</h3><p>Мы поддерживаем белорусских добровольцев в Украине через юридическую и психологическую помощь, программы по борьбе с зависимостями и создание волонтёрского хаба.</p><p>Это первый шаг к системной и прозрачной работе.</p>"
   },
   {
     "id": 2,
-    "date": "01.02.2024",
-    "title": "Запуск программы правовой поддержки",
-    "excerpt": "Мы начинаем масштабный проект по легализации белорусов...",
+    "date": "15.01.2026",
+    "title": "Приобретение домена для сайта",
+    "excerpt": "Мы приобрели собственный домен и готовим площадку для коммуникации...",
     "image": "/img/news/news-2.webp",
-    "content": "<h3>Юридическая помощь</h3><p>Мы помогаем с документами, легализацией и защитой прав наших воинов.</p>"
+    "content": "<h3>Собственная площадка</h3><p>Фонд Bulwark получил собственный домен, который станет основой для нашего сайта.</p><h3>Удобство и прозрачность</h3><p>На сайте будут размещаться новости, отчёты и инструкции для добровольцев. Это важный шаг для создания надёжной информационной базы.</p>"
   },
   {
     "id": 3,
-    "date": "08.02.2026",
-    "title": "Запуск сайта и нового проекта",
-    "excerpt": "Мы начинаем масштабный проект по помощи белорусским добровольцам...",
+    "date": "05.02.2026",
+    "title": "Запуск Telegram-бота",
+    "excerpt": "Мы создали Telegram-бот для быстрой коммуникации и поддержки...",
     "image": "/img/news/news-3.webp",
-    "content": "<p>Сегодня исторический день — наш сайт начал работу. Это цифровой фронт нашей борьбы.</p>"
+    "content": "<h3>Новый инструмент</h3><p>Telegram-бот фонда Bulwark помогает получать новости, находить контакты и быстро присоединяться к волонтёрским программам.</p><h3>Доступность</h3><p>Бот работает круглосуточно и делает коммуникацию более простой и эффективной.</p>"
   },
   {
     "id": 4,
-    "date": "09.02.2026",
-    "title": "Развитие проекта Bulwark",
-    "excerpt": "Мы начинаем масштабный проект по помощи белорусским добровольцам...",
+    "date": "12.02.2026",
+    "title": "Создание Telegram-канала",
+    "excerpt": "Мы открыли официальный канал для новостей и обновлений...",
     "image": "/img/news/news-4.webp",
-    "content": "<p>Дополнительная информация о развитии проекта Bulwark в 2026 году.</p>"
+    "content": "<h3>Официальный канал</h3><p>Telegram-канал Bulwark стал главной точкой для публикации новостей и обновлений.</p><h3>Сообщество</h3><p>Здесь мы делимся информацией о новых программах, отчётах и возможностях для волонтёрства. Канал объединяет людей, которые хотят помогать и быть в курсе событий.</p>"
   },
   {
     "id": 5,
