--- a/public/locales/news-uk.json
+++ b/public/locales/news-uk.json
@@ -1,35 +1,35 @@
 [
   {
     "id": 1,
-    "date": "05.02.2024",
-    "title": "Нова новина: Розширення діяльності",
-    "excerpt": "Короткий текст для картки на головній сторінці...",
+    "date": "10.01.2026",
+    "title": "Реєстрація фонду Bulwark",
+    "excerpt": "Наш фонд офіційно зареєстрований і розпочав свою діяльність...",
     "image": "/img/news/news-1.webp",
-    "content": "<p>Повний текст про те, як саме розширюється діяльність фонду Bulwark. Тут може бути багато абзаців.</p>"
+    "content": "<h3>Офіційний старт</h3><p>Фонд Bulwark отримав юридичну реєстрацію. Це дозволяє нам легально працювати та відкрито співпрацювати з партнерами.</p><h3>Місія</h3><p>Ми підтримуємо білоруських добровольців в Україні через юридичну та психологічну допомогу, програми боротьби із залежностями та створення волонтерського хабу.</p><p>Це перший крок до системної та прозорої роботи.</p>"
   },
   {
     "id": 2,
-    "date": "01.02.2024",
-    "title": "Запуск програми правової підтримки",
-    "excerpt": "Ми розпочинаємо масштабний проєкт з легалізації білорусів...",
+    "date": "15.01.2026",
+    "title": "Придбання домену для сайту",
+    "excerpt": "Ми придбали власний домен і готуємо платформу для комунікації...",
     "image": "/img/news/news-2.webp",
-    "content": "<h3>Юридична допомога</h3><p>Ми допомагаємо з документами, легалізацією та захистом прав наших воїнів.</p>"
+    "content": "<h3>Власна платформа</h3><p>Фонд Bulwark отримав власний домен, який стане основою для нашого сайту.</p><h3>Зручність і прозорість</h3><p>На сайті будуть розміщуватися новини, звіти та інструкції для добровольців. Це важливий крок для створення надійної інформаційної бази.</p>"
   },
   {
     "id": 3,
-    "date": "08.02.2026",
-    "title": "Запуск сайту та нового проєкту",
-    "excerpt": "Ми розпочинаємо масштабний проєкт з допомоги білоруським добровольцям...",
+    "date": "05.02.2026",
+    "title": "Запуск Telegram-бота",
+    "excerpt": "Ми створили Telegram-бот для швидкої комунікації та підтримки...",
     "image": "/img/news/news-3.webp",
-    "content": "<p>Сьогодні історичний день — наш сайт розпочав роботу. Це цифровий фронт нашої боротьби.</p>"
+    "content": "<h3>Новий інструмент</h3><p>Telegram-бот фонду Bulwark допомагає отримувати новини, знаходити контакти та швидко долучатися до волонтерських програм.</p><h3>Доступність</h3><p>Бот працює цілодобово та робить комунікацію більш простою й ефективною.</p>"
   },
   {
     "id": 4,
-    "date": "09.02.2026",
-    "title": "Розвиток проєкту Bulwark",
-    "excerpt": "Ми розпочинаємо масштабний проєкт з допомоги білоруським добровольцям...",
+    "date": "12.02.2026",
+    "title": "Створення Telegram-каналу",
+    "excerpt": "Ми відкрили офіційний канал для новин та оновлень...",
     "image": "/img/news/news-4.webp",
-    "content": "<p>Додаткова інформація про розвиток проєкту Bulwark у 2026 році.</p>"
+    "content": "<h3>Офіційний канал</h3><p>Telegram-канал Bulwark став головною точкою для публікації новин та оновлень.</p><h3>Спільнота</h3><p>Тут ми ділимося інформацією про нові програми, звіти та можливості для волонтерства. Канал об’єднує людей, які хочуть допомагати та бути в курсі подій.</p>"
   },
   {
     "id": 5,
