--- a/public/locales/donations-be.json
+++ b/public/locales/donations-be.json
@@ -1,12 +1,12 @@
 {
   "foundation": {
     "id": "foundation",
-    "title": "Поддержать фонд",
-    "description": "Операционная деятельность, административные расходы и логистика",
+    "title": "Падтрымаць фонд",
+    "description": "Аперацыйная дзейнасць, адміністрацыйныя выдаткі і лагістыка",
     "bank_details": {
       "recipient": "БО \"БФ \"Булварк\"",
       "edrpou": "46082758",
-      "bank_name": "ПриватБанк / PrivatBank",
+      "bank_name": "ПрыватБанк / PrivatBank",
       "swift": "PBANUA2X"
     },
     "purpose": "Благодійний внесок на виконання цілей БФ",
@@ -19,12 +19,12 @@
   },
   "soldiers": {
     "id": "soldiers",
-    "title": "Поддержать бойцов",
-    "description": "Снаряжение, медицина и технические средства для добровольцев",
+    "title": "Падтрымаць байцоў",
+    "description": "Рыштунак, медыцына і тэхнічныя сродкі для добраахвотнікаў",
     "bank_details": {
       "recipient": "CO \"CHARITABLE FOUNDATION \"BULWARK\"",
       "edrpou": "46082758",
-      "bank_name": "АТ «УНИВЕРСАЛ БАНК»",
+      "bank_name": "АТ «УНІВЕРСАЛ БАНК»",
       "swift": "UNJSUAUKXXX"
     },
     "purpose": "Благодійний внесок для виконання цілей благодійного фонду",
@@ -32,7 +32,7 @@
       { "currency": "UAH", "value": "UA443220010000026001700010145" },
       { "currency": "USD", "value": "UA443220010000026001700013249" },
       { "currency": "EUR", "value": "UA353220010000026000700013251" },
-      { "type": "header", "label": "Криптовалютные счета" },
+      { "type": "header", "label": "Крыптавалютныя рахункі" },
       { "currency": "BTC", "value": "136ktmFvk157ehbXFkrk1UNaTZEYYL5x24" },
       {
         "currency": "ETH ERC20",
@@ -54,12 +54,12 @@
     ]
   },
   "ui": {
-    "bank_title": "Банковские реквизиты",
-    "recipient": "Кому:",
+    "bank_title": "Банкаўскія рэквізіты",
+    "recipient": "Каму:",
     "edrpou": "Код ЕДРПОУ:",
-    "bank_name": "Название банка:",
+    "bank_name": "Назва банка:",
     "swift": "SWIFT code:",
-    "purpose_label": "Назначение платежа (обязательно):",
-    "accounts_title": "Счета для перевода"
+    "purpose_label": "Назва плацяжу (пры пераводзе абавязкова):",
+    "accounts_title": "Рахункі для пераводу"
   }
 }
