--- a/public/locales/donations-uk.json
+++ b/public/locales/donations-uk.json
@@ -1,91 +1,65 @@
 {
   "foundation": {
     "id": "foundation",
-    "type": "donation",
     "title": "Підтримати фонд",
     "description": "Операційна діяльність, адміністративні витрати та логістика",
+    "bank_details": {
+      "recipient": "БО \"БФ \"Булварк\"",
+      "edrpou": "46082758",
+      "bank_name": "ПриватБанк / PrivatBank",
+      "swift": "PBANUA2X"
+    },
     "purpose": "Благодійний внесок на виконання цілей БФ",
     "accounts": [
-      {
-        "currency": "UAH",
-        "label": "Гривня (ПриватБанк)",
-        "details": [
-          { "name": "IBAN", "value": "UA613052990000026003035931199" },
-          { "name": "ЄДРПОУ", "value": "46082758" }
-        ]
-      },
-      {
-        "currency": "USD",
-        "label": "USD (ПриватБанк)",
-        "details": [
-          { "name": "IBAN", "value": "UA803052990000026006035930658" },
-          { "name": "SWIFT", "value": "PBANUA2X" }
-        ]
-      },
-      {
-        "currency": "EUR",
-        "label": "EUR (ПриватБанк)",
-        "details": [
-          { "name": "IBAN", "value": "UA273052990000026007035935555" },
-          { "name": "SWIFT", "value": "PBANUA2X" }
-        ]
-      },
-      {
-        "currency": "PLN",
-        "label": "PLN (ПриватБанк)",
-        "details": [
-          { "name": "IBAN", "value": "UA723052990000026002035932199" },
-          { "name": "SWIFT", "value": "PBANUA2X" }
-        ]
-      }
+      { "currency": "UAH", "value": "UA613052990000026003035931199" },
+      { "currency": "USD", "value": "UA803052990000026006035930658" },
+      { "currency": "EUR", "value": "UA273052990000026007035935555" },
+      { "currency": "PLN", "value": "UA723052990000026002035932199" }
     ]
   },
   "soldiers": {
     "id": "soldiers",
-    "type": "donation",
     "title": "Підтримати бійців",
     "description": "Спорядження, медицина та технічні засоби для добровольців",
+    "bank_details": {
+      "recipient": "CO \"CHARITABLE FOUNDATION \"BULWARK\"",
+      "edrpou": "46082758",
+      "bank_name": "АТ «УНІВЕРСАЛ БАНК»",
+      "swift": "UNJSUAUKXXX"
+    },
     "purpose": "Благодійний внесок для виконання цілей благодійного фонду",
     "accounts": [
+      { "currency": "UAH", "value": "UA443220010000026001700010145" },
+      { "currency": "USD", "value": "UA443220010000026001700013249" },
+      { "currency": "EUR", "value": "UA353220010000026000700013251" },
+      { "type": "header", "label": "Криптовалютні рахунки" },
+      { "currency": "BTC", "value": "136ktmFvk157ehbXFkrk1UNaTZEYYL5x24" },
       {
-        "currency": "UAH",
-        "label": "Гривня (УНІВЕРСАЛ БАНК)",
-        "details": [
-          { "name": "IBAN", "value": "UA443220010000026001700010145" },
-          { "name": "ЄДРПОУ", "value": "46082758" }
-        ]
+        "currency": "ETH ERC20",
+        "value": "0x1f55d73b929fbdd2927c322f187d8b125402e188"
       },
       {
-        "currency": "USD",
-        "label": "USD (УНІВЕРСАЛ БАНК)",
-        "details": [
-          { "name": "IBAN", "value": "UA443220010000026001700013249" },
-          { "name": "SWIFT", "value": "UNJSUAUKXXX" }
-        ]
+        "currency": "USDT Ethereum",
+        "value": "0x1f55d73b929fbdd2927c322f187d8b125402e188"
       },
       {
-        "currency": "EUR",
-        "label": "EUR (УНІВЕРСАЛ БАНК)",
-        "details": [
-          { "name": "IBAN", "value": "UA353220010000026000700013251" },
-          { "name": "SWIFT", "value": "UNJSUAUKXXX" }
-        ]
+        "currency": "USDC ETH ERC20",
+        "value": "0x1f55d73b929fbdd2927c322f187d8b125402e188"
       },
       {
-        "currency": "CRYPTO",
-        "label": "Криптовалюти",
-        "details": [
-          { "name": "BTC", "value": "136ktmFvk157ehbXFkrk1UNaTZEYYL5x24" },
-          {
-            "name": "ETH (ERC20)",
-            "value": "0x1f55d73b929fbdd2927c322f187d8b125402e188"
-          },
-          {
-            "name": "USDT (Tron)",
-            "value": "TCvwUpa7tLGW48xXaFxLruTRN6cmnqBLB5"
-          }
-        ]
-      }
+        "currency": "USDT Tron",
+        "value": "TCvwUpa7tLGW48xXaFxLruTRN6cmnqBLB5"
+      },
+      { "currency": "TRX Tron", "value": "TCvwUpa7tLGW48xXaFxLruTRN6cmnqBLB5" }
     ]
+  },
+  "ui": {
+    "bank_title": "Банківські реквізити",
+    "recipient": "Кому:",
+    "edrpou": "Код ЄДРПОУ:",
+    "bank_name": "Назва банку:",
+    "swift": "SWIFT code:",
+    "purpose_label": "Призначення платежу (обов'язково):",
+    "accounts_title": "Рахунки для переказу"
   }
 }
