feat: add full donation details and localization for foundation and soldiers

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -257,5 +257,26 @@
       "point3": "Салідарнасць нацый",
       "bg_text": "Future"
     }
+  },
+
+  "foundation": {
+    "title": "Падтрымаць фонд",
+    "description": "Аперацыйная дзейнасць, адміністрацыйныя выдаткі і лагістыка",
+    "purpose": "Благодійний внесок на виконання цілей БФ"
+  },
+  "soldiers": {
+    "title": "Падтрымаць байцоў",
+    "description": "Рыштунак, медыцына і тэхнічныя сродкі для добраахвотнікаў",
+    "purpose": "Благодійний внесок для виконання цілей благодійного фонду"
+  },
+  "ui": {
+    "bank_title": "Банкаўскія рэквізіты",
+    "recipient": "Каму:",
+    "edrpou": "Код ЕДРПОУ:",
+    "bank_name": "Назва банка:",
+    "swift": "SWIFT code:",
+    "purpose_label": "Назва плацяжу (пры пераводзе абавязкова):",
+    "accounts_title": "Рахункі для пераводу",
+    "crypto_title": "Крыптавалютныя рахункі"
   }
 }
