--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -254,5 +254,25 @@
       "point3": "Солидарность наций",
       "bg_text": "Future"
     }
+  },
+  "foundation": {
+    "title": "Поддержать фонд",
+    "description": "Операционная деятельность, административные расходы и логистика",
+    "purpose": "Благодійний внесок на виконання цілей БФ"
+  },
+  "soldiers": {
+    "title": "Поддержать бойцов",
+    "description": "Снаряжение, медицина и технические средства для добровольцев",
+    "purpose": "Благодійний внесок для виконання цілей благодійного фонду"
+  },
+  "ui": {
+    "bank_title": "Банковские реквизиты",
+    "recipient": "Получатель:",
+    "edrpou": "Код ЕГРПОУ:",
+    "bank_name": "Название банка:",
+    "swift": "SWIFT code:",
+    "purpose_label": "Назначение платежа (обязательно при переводе):",
+    "accounts_title": "Счета для перевода",
+    "crypto_title": "Криптовалютные счета"
   }
 }
