--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -254,5 +254,25 @@
       "point3": "Солідарність націй",
       "bg_text": "Future"
     }
+  },
+  "foundation": {
+    "title": "Підтримати фонд",
+    "description": "Операційна діяльність, адміністративні витрати та логістика",
+    "purpose": "Благодійний внесок на виконання цілей БФ"
+  },
+  "soldiers": {
+    "title": "Підтримати бійців",
+    "description": "Спорядження, медицина та технічні засоби для добровольців",
+    "purpose": "Благодійний внесок для виконання цілей благодійного фонду"
+  },
+  "ui": {
+    "bank_title": "Банківські реквізити",
+    "recipient": "Отримувач:",
+    "edrpou": "Код ЄДРПОУ:",
+    "bank_name": "Назва банку:",
+    "swift": "SWIFT code:",
+    "purpose_label": "Призначення платежу (обов'язково при переказі):",
+    "accounts_title": "Рахунки для переказу",
+    "crypto_title": "Криптовалютні рахунки"
   }
 }
