--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -293,5 +293,37 @@
     "contact_label": "Contact (Signal / Telegram)",
     "contact_placeholder": "Telegram @user or Signal",
     "btn_send": "Submit Request"
+  },
+  "support": {
+    "page_title": "Support | Bulwark",
+    "tag": "Support & Partnership",
+    "main_title": "Your support is our strength",
+    "hero_text": "Every resource you invest in Bulwark works to preserve the human capital of Belarus.",
+    "hero_subtext": "Your help can be financial, expert, or media-based — every contribution brings us closer to a common goal: the safety of those who protect us.",
+    "usage_title": "How funds are used",
+    "item1_title": "Legal Shield",
+    "item1_text": "Legalization in Ukraine and legal consulting for soldiers.",
+    "item2_title": "Psychology",
+    "item2_text": "PTSD assistance and adaptation of soldiers to civilian life.",
+    "item3_title": "Future",
+    "item3_text": "Personnel reserve and support for families of volunteers.",
+    "finance_title": "Financial Contribution",
+    "donate_direct_title": "Help the soldiers/foundation",
+    "donate_direct_text": "Direct financial support for our defenders via fast payments",
+    "requisites_title": "Payment Options",
+    "requisites_text": "Card online / Bank transfer / Cryptocurrencies",
+    "partner_title": "Become a Partner",
+    "type2_title": "Expert Assistance",
+    "type2_text": "Legal services, medicine, or IT pro bono.",
+    "type3_title": "Business Cooperation",
+    "type3_text": "Corporate contributions or resource support.",
+    "volunteer_title": "Volunteerism",
+    "volunteer_text": "Help with translations, communication, or organization.",
+    "cta_title": "Have a proposal?",
+    "cta_subtext": "We are always open to new ideas. Write to us or use our bot.",
+    "cta_form_label": "Submit a request via the form",
+    "btn_submit": "Become a partner",
+    "btn_donate": "Support",
+    "btn_requisites": "View Details"
   }
 }
