feat: implement GDPR compliance (privacy policy & cookie banner)

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -337,5 +337,23 @@
     "title": "База ведаў",
     "read_more": "Чытаць матэрыял",
     "back_to_list": "Назад да спіса"
+  },
+  "privacy": {
+    "page_title": "Палітыка прыватнасці | Bulwark",
+    "title": "Палітыка прыватнасці",
+    "section1_title": "1. Агульныя палажэнні",
+    "section1_text": "Гэтая палітыка тлумачыць, як наш фонд апрацоўвае дадзеныя, якія вы пакідаеце праз формы на гэтым сайце. Мы паважаем вашу прыватнасць і бяспеку.",
+    "section2_title": "2. Збор дадзеных",
+    "section2_text": "Мы збіраем толькі тую інфармацыю, якую вы ўводзіце самастойна: імя (пазыўны), кантактныя дадзеныя (Email/Telegram), ваш статус і сутнасць вашага запыту.",
+    "section3_title": "3. Выкарыстанне інфармацыі",
+    "section3_text": "Вашы дадзеныя выкарыстоўваюцца выключна для таго, каб мы маглі звязацца з вамі і апрацаваць ваш запыт на дапамогу або прапанову аб партнёрстве. Інфармацыя не перадаецца трэцім асобам.",
+    "section4_title": "4. Тэрмін захавання",
+    "section4_text": "Дадзеныя захоўваюцца столькі часу, колькі неабходна для вырашэння вашага пытання, пасля чаго яны выдаляюцца.",
+    "back_to_home": "Назад на галоўную"
+  },
+  "cookies": {
+    "text": "Мы выкарыстоўваем файлы cookie для паляпшэння працы сайта. Застаючыся на сайце, вы згаджаецеся з нашай",
+    "policy_link": "палітыкай прыватнасці",
+    "accept": "Згодзен"
   }
 }
