--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -331,5 +331,23 @@
     "title": "База знаний",
     "read_more": "Читать материал",
     "back_to_list": "Назад к списку"
+  },
+  "privacy": {
+    "page_title": "Политика конфиденциальности | Bulwark",
+    "title": "Политика конфиденциальности",
+    "section1_title": "1. Общие положения",
+    "section1_text": "Эта политика объясняет, как наш фонд обрабатывает данные, которые вы оставляете через формы на этом сайте. Мы уважаем вашу приватность и безопасность.",
+    "section2_title": "2. Сбор данных",
+    "section2_text": "Мы собираем только ту информацию, которую вы вводите самостоятельно: имя (позывной), контактные данные (Email/Telegram), ваш статус и суть вашего запроса.",
+    "section3_title": "3. Использование информации",
+    "section3_text": "Ваши данные используются исключительно для того, чтобы мы могли связаться с вами и обработать ваш запрос на помощь или предложение о партнерстве. Информация не передается третьим лицам.",
+    "section4_title": "4. Срок хранения",
+    "section4_text": "Данные хранятся столько времени, сколько необходимо для решения вашего вопроса, после чего они удаляются.",
+    "back_to_home": "Назад на главную"
+  },
+  "cookies": {
+    "text": "Мы используем файлы cookie для улучшения работы сайта. Оставаясь на сайте, вы соглашаетесь с нашей",
+    "policy_link": "политикой конфиденциальности",
+    "accept": "Согласен"
   }
 }
