--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -331,5 +331,23 @@
     "title": "База знань",
     "read_more": "Читати матеріал",
     "back_to_list": "Назад да списку"
+  },
+  "privacy": {
+    "page_title": "Політика конфіденційності | Bulwark",
+    "title": "Політика конфіденційності",
+    "section1_title": "1. Загальні положення",
+    "section1_text": "Ця політика пояснює, як наш фонд обробляє дані, які ви залишаєте через форми на цьому сайті. Ми поважаємо вашу приватність та безпеку.",
+    "section2_title": "2. Збір даних",
+    "section2_text": "Ми збираємо лише ту інформацію, яку ви вводите самостійно: ім'я (позивний), контактні дані (Email/Telegram), ваш статус та суть вашого запиту.",
+    "section3_title": "3. Використання інформації",
+    "section3_text": "Ваші дані використовуються виключно для того, щоб ми могли зв'язатися з вами та обробити ваш запит на допомогу або пропозицію про партнерство. Інформація не передається третім особам.",
+    "section4_title": "4. Термін зберігання",
+    "section4_text": "Дані зберігаються стільки часу, скільки необхідно для вирішення вашого питання, після чого вони видаляються.",
+    "back_to_home": "Назад на головну"
+  },
+  "cookies": {
+    "text": "Ми використовуємо файли cookie для покращення роботи сайту. Залишаючись на сайті, ви погоджуєтеся з нашою",
+    "policy_link": "політикою конфіденційності",
+    "accept": "Згоден"
   }
 }
